<resources>
    <string name="app_name">Supplement Tracker</string>
    <string name="intro_text">"Do you take Pill ? "</string>
    <string name="setting_category_option">Option Setting</string>
    <string name="option_alarm_ringtone">Ringtone</string>
    <string name="option_alarm_when">Alarm Time</string>
    <string name="option_alarm_vibration">Vibration</string>
    <string name="option_language">English</string>
    <string name="option_language_select">Language</string>
    <string name="option_alarm_ringtone_summary">alarm sound On / Off</string>
    <string name="option_alarm_vibration_summary">alarm vibration On / Off</string>
    <string name="option_language_select_summary">select Language</string>
    <string name="option_timer">Alarm Time</string>
    <string name="setting_category_app">App Setting</string>
    <string name="option_Alarm_enable">Alarm Enable</string>
    <string name="category_alarm_setting">Alarm Setting</string>
    <string name="Menu_1">My Pill List</string>
    <string name="Menu_2">Report</string>
    <string name="Menu_3">Setting</string>
    <string name="call_camera">Camera</string>
    <string name="search_img">Search</string>
    <string name="Toast_start_camera">Run Camera App</string>
    <string name="Toast_App_finish">Please again to exit</string>
    <string name="floting_btn_text">+ Image Search</string>
    <string name="last_take_time">"last take time : "</string>
    <string name="Item_Alarm">Alarm</string>
    <string name="Name">Medicine</string>
    <string name="Alarm">Alarm</string>
    <string name="Description">Description</string>
</resources>