<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:defaultValue="true"
    android:iconSpaceReserved="false"
    app:fragment="com.example.supplement_tracker.">

    <PreferenceCategory
        android:title="@string/setting_category_option"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_alarm_enable"
            android:title="@string/option_Alarm_enable"
            app:iconSpaceReserved="false" />
        <PreferenceCategory android:title="@string/category_alarm_setting">

            <SwitchPreference
                android:layout_gravity="center"
                android:defaultValue="true"
                android:dependency="switch_alarm_enable"
                android:key="switch_alarm_sound"
                android:summary="@string/option_alarm_ringtone_summary"
                android:title="@string/option_alarm_ringtone"
                app:iconSpaceReserved="true" />
            <SwitchPreference
                android:layout_gravity="center"
                android:defaultValue="true"
                android:dependency="switch_alarm_enable"
                android:key="switch_alarm_vibration"
                android:summary="@string/option_alarm_vibration_summary"
                android:title="@string/option_alarm_vibration"
                app:iconSpaceReserved="true" />
            <ListPreference
                android:dependency="switch_alarm_enable"
                android:entries="@array/option_time_list"
                android:entryValues="@array/option_time_value"
                android:key="option_timer"
                android:title="@string/option_timer"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory
        android:clickable="false"
        android:title="@string/setting_category_app"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="first"
            android:entries="@array/option_language_list"
            android:entryValues="@array/option_language_value"
            android:key="option_language"
            android:title="@string/option_language_select"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


</PreferenceScreen>